adjust loading bug mod4

--- a/index.html
+++ b/index.html
@@ -1391,7 +1391,7 @@ $(document.head).find('#style-ui-bar').remove();
              &lt;&lt;/timed&gt;&gt;
             &lt;&lt;timed 6s&gt;&gt;
                   &lt;&lt;set $prevpass to $passage&gt;&gt;
-               &lt;&lt;set $nextpass to &quot;&quot;&gt;&gt;
+               &lt;&lt;set $nextpass to &quot;2mod4intro1&quot;&gt;&gt;
             &lt;&lt;goto &quot;loading&quot;&gt;&gt;
              &lt;&lt;/timed&gt;&gt;
             &lt;&lt;/if&gt;&gt;
