--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
 		<div id="init-lacking"><p>Browser lacks capabilities required to play.</p><p>Upgrade or switch to another browser.</p></div>
 		<div id="init-loading"><div>Loading&hellip;</div></div>
 	</div>
-	<!-- UUID://F9E39354-F641-4070-8B45-C314A3FDC8C8// --><tw-storydata name="Greenpeace X Coney" startnode="187" creator="Tweego" creator-version="2.1.1+81d1d71" ifid="F9E39354-F641-4070-8B45-C314A3FDC8C8" zoom="0.6" format="SugarCube" format-version="2.36.1" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;600&display=swap");
+	<!-- UUID://F9E39354-F641-4070-8B45-C314A3FDC8C8// --><tw-storydata name="Greenpeace X Coney" startnode="13" creator="Tweego" creator-version="2.1.1+81d1d71" ifid="F9E39354-F641-4070-8B45-C314A3FDC8C8" zoom="0.6" format="SugarCube" format-version="2.36.1" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;600&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Jura:wght@300;400;500;700&display=swap');
 @import url("./styles/generics.css");
 @import url("./styles/styles.css");</style><script role="script" id="twine-user-script" type="text/twine-javascript">$('#ui-bar').remove();
@@ -1278,7 +1278,7 @@ The order you go in will be randomised.&lt;/p&gt;
     &lt;h1 class=&quot;title&quot;&gt; Codename: $codename &lt;/h1&gt;
  &lt;/div&gt;
       &lt;div class=&quot;text-wrapper&quot;&gt;
-      &lt;p&gt; Thannk you!&lt;/p&gt;
+      &lt;p&gt; Thank you!&lt;/p&gt;
   &lt;p&gt;That’s the end of the first session – we are off - on our way!&lt;/p&gt;
   &lt;p&gt;As we go through this process together, I&#39;m going to tell you more about playful climate activism and more about Codename: Violet.&lt;/p&gt;
  &lt;p&gt; For now, the codename is all I&#39;ll tell you, but at the start, it was all we knew too.&lt;/p&gt;
@@ -1468,7 +1468,10 @@ The order you go in will be randomised.&lt;/p&gt;
 
 &lt;/main&gt;
 &lt;&lt;include &quot;footerskip&quot;&gt;&gt;
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="52" name="2modulelist" tags="nobr" position="225,725" size="100,100">&lt;&lt;set $passage to &quot;2modulelist&quot;&gt;&gt;&lt;&lt;set $session to 1&gt;&gt;
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="52" name="2modulelist" tags="nobr" position="225,725" size="100,100">&lt;&lt;set $passage to &quot;2modulelist&quot;&gt;&gt;&lt;&lt;set $session to 2&gt;&gt;
+&lt;&lt;if $skip is true&gt;&gt;&lt;&lt;timed 5s&gt;&gt;&lt;&lt;set $skip to false&gt;&gt;
+&lt;&lt;goto $nextpass&gt;&gt;
+&lt;&lt;/timed&gt;&gt;&lt;&lt;/if&gt;&gt;
 &lt;div class=&quot;wrapper box&quot;&gt;
   &lt;main class=&quot;modules&quot;&gt;
   &lt;h1 class=&quot;title&quot;&gt;SESSION TWO&lt;/h1&gt;
@@ -1954,7 +1957,10 @@ Anyone like Potatoes? Amazing – everyone. I can’t see so I’ll just make up
 &lt;&lt;button &quot;I&#39;ve explained!&quot;&gt;&gt;
   &lt;&lt;replace &quot;#mount&quot;&gt;&gt;
     &lt;audio src=&quot;/assets/audio/SESSION2_MOD4_intro_3.mp3&quot; autoplay&gt;Audio is not supported on your device&lt;/audio&gt;
-    &lt;p&gt;When you have finished click &lt;&lt;button &quot;Move On&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;goto $nextpass&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/p&gt;
+    &lt;p&gt;When you have finished click &lt;&lt;button &quot;Move On&quot;&gt;&gt;
+      &lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;set $mod4 to true&gt;&gt;
+      &lt;&lt;set $skip to true&gt;&gt;&lt;&lt;goto &quot;2modulelist&quot;&gt;&gt;
+      &lt;&lt;/button&gt;&gt;&lt;/p&gt;
   &lt;&lt;/replace&gt;&gt;
 &lt;&lt;/button&gt;&gt;
 &lt;/div&gt;
@@ -2010,7 +2016,7 @@ We play games of systems not to reduce them, not to suggest they are unreal, not
 &lt;p&gt;It reminds us that change is possible.&lt;/p&gt;
 &lt;p&gt;Isn’t it time we played a different game?&lt;/p&gt;
 
-&lt;&lt;button &quot;Next&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;set $mod4 to true&gt;&gt;&lt;&lt;goto $nextpass&gt;&gt;&lt;&lt;/button&gt;&gt;
+&lt;&lt;button &quot;Next&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;goto $nextpass&gt;&gt;&lt;&lt;/button&gt;&gt;
 &lt;/div&gt;
  &lt;/main&gt;
      &lt;&lt;include &quot;footerskip&quot;&gt;&gt;
@@ -2126,6 +2132,9 @@ We play games of systems not to reduce them, not to suggest they are unreal, not
 &lt;/main&gt;
 &lt;&lt;include &quot;footerskip&quot;&gt;&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="85" name="3modulelist" tags="nobr" position="600,1100" size="100,100">&lt;&lt;set $passage to &quot;3modulelist&quot;&gt;&gt;&lt;&lt;set $session to 3&gt;&gt;
+&lt;&lt;if $skip is true&gt;&gt;&lt;&lt;timed 5s&gt;&gt;&lt;&lt;set $skip to false&gt;&gt;
+&lt;&lt;goto $nextpass&gt;&gt;
+&lt;&lt;/timed&gt;&gt;&lt;&lt;/if&gt;&gt;
 &lt;div class=&quot;wrapper box&quot;&gt;
   &lt;main class=&quot;modules&quot;&gt;
   &lt;h1 class=&quot;title&quot;&gt;SESSION THREE&lt;/h1&gt;
@@ -2437,7 +2446,7 @@ When finished click &lt;&lt;button &quot;Move on&quot;&gt;&gt;&lt;&lt;set $prevp
  
   &lt;&lt;set $choice to &quot;Air Pollution – inspired by Alejandro Daly&quot;&gt;&gt;
   &lt;&lt;set $mod6audio to &quot;air&quot;&gt;&gt;
-  &lt;&lt;timed 5s&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;set $mod6 to true&gt;&gt;&lt;&lt;goto $nextpass&gt;&gt;&lt;&lt;/timed&gt;&gt;
+  &lt;&lt;timed 2s&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;set $mod6 to true&gt;&gt;&lt;&lt;goto $nextpass&gt;&gt;&lt;&lt;/timed&gt;&gt;
 &lt;&lt;/button&gt;&gt;
 &lt;/div&gt;
 &lt;div class=&quot;char-item&quot;&gt;
@@ -2446,7 +2455,7 @@ When finished click &lt;&lt;button &quot;Move on&quot;&gt;&gt;&lt;&lt;set $prevp
 
   &lt;&lt;set $choice to &quot;Meat Consumption – inspired by Genesis Butler&quot;&gt;&gt;
     &lt;&lt;set $mod6audio to &quot;meat&quot;&gt;&gt;
-  &lt;&lt;timed 5s&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;set $mod6 to true&gt;&gt;&lt;&lt;goto $nextpass&gt;&gt;&lt;&lt;/timed&gt;&gt;
+  &lt;&lt;timed 2s&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;set $mod6 to true&gt;&gt;&lt;&lt;goto $nextpass&gt;&gt;&lt;&lt;/timed&gt;&gt;
 &lt;&lt;/button&gt;&gt;
 &lt;/div&gt;
 &lt;div class=&quot;char-item&quot;&gt;
@@ -2455,7 +2464,7 @@ When finished click &lt;&lt;button &quot;Move on&quot;&gt;&gt;&lt;&lt;set $prevp
 
   &lt;&lt;set $choice to &quot;Plastic Pollution – inspired by Melati &amp; Isabel Wijsen&quot;&gt;&gt;
     &lt;&lt;set $mod6audio to &quot;plastic&quot;&gt;&gt;
-  &lt;&lt;timed 5s&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;set $mod6 to true&gt;&gt;&lt;&lt;goto $nextpass&gt;&gt;&lt;&lt;/timed&gt;&gt;
+  &lt;&lt;timed 2s&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;set $mod6 to true&gt;&gt;&lt;&lt;goto $nextpass&gt;&gt;&lt;&lt;/timed&gt;&gt;
 &lt;&lt;/button&gt;&gt;
 &lt;/div&gt;
 &lt;div class=&quot;char-item&quot;&gt;
@@ -2464,7 +2473,7 @@ When finished click &lt;&lt;button &quot;Move on&quot;&gt;&gt;&lt;&lt;set $prevp
 
   &lt;&lt;set $choice to &quot;Sustainable Palm Oil – inspired by Salsabila Khairunnisa&quot;&gt;&gt;
     &lt;&lt;set $mod6audio to &quot;palmoil&quot;&gt;&gt;
-  &lt;&lt;timed 5s&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;set $mod6 to true&gt;&gt;&lt;&lt;goto $nextpass&gt;&gt;&lt;&lt;/timed&gt;&gt;
+  &lt;&lt;timed 2s&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;set $mod6 to true&gt;&gt;&lt;&lt;goto $nextpass&gt;&gt;&lt;&lt;/timed&gt;&gt;
 &lt;&lt;/button&gt;&gt;
 &lt;/div&gt;
 &lt;div class=&quot;char-item&quot;&gt;
@@ -2473,7 +2482,7 @@ When finished click &lt;&lt;button &quot;Move on&quot;&gt;&gt;&lt;&lt;set $prevp
  
   &lt;&lt;set $choice to &quot;Deforestation &amp; Biodiversity – inspired by Professor Wangari Maathai&quot;&gt;&gt;
     &lt;&lt;set $mod6audio to &quot;deforestation&quot;&gt;&gt;
-  &lt;&lt;timed 5s&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;set $mod6 to true&gt;&gt;&lt;&lt;goto $nextpass&gt;&gt;&lt;&lt;/timed&gt;&gt;
+  &lt;&lt;timed 2s&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;set $mod6 to true&gt;&gt;&lt;&lt;goto $nextpass&gt;&gt;&lt;&lt;/timed&gt;&gt;
 &lt;&lt;/button&gt;&gt;
 &lt;/div&gt;
 &lt;div class=&quot;char-item&quot;&gt;
@@ -2482,7 +2491,7 @@ When finished click &lt;&lt;button &quot;Move on&quot;&gt;&gt;&lt;&lt;set $prevp
 
   &lt;&lt;set $choice to &quot;Fast Fashion – inspired by Céline Semaan-Vernon&quot;&gt;&gt;
     &lt;&lt;set $mod6audio to &quot;fastfashion&quot;&gt;&gt;
-  &lt;&lt;timed 5s&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;set $mod6 to true&gt;&gt;&lt;&lt;goto $nextpass&gt;&gt;&lt;&lt;/timed&gt;&gt;
+  &lt;&lt;timed 2s&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;set $mod6 to true&gt;&gt;&lt;&lt;goto $nextpass&gt;&gt;&lt;&lt;/timed&gt;&gt;
 &lt;&lt;/button&gt;&gt;
 &lt;/div&gt;
 &lt;/div&gt;
@@ -2559,7 +2568,8 @@ When finished click &lt;&lt;button &quot;Move on&quot;&gt;&gt;&lt;&lt;set $prevp
 &lt;&lt;include &quot;checkmod6audio&quot;&gt;&gt;
   &lt;&lt;replace &quot;#mount&quot;&gt;&gt;
     &lt;p&gt;You’ve picked to focus on $choice&lt;/p&gt;
-    &lt;&lt;timed 8s&gt;&gt;&lt;&lt;goto &quot;3sessionoutro2&quot;&gt;&gt;&lt;&lt;/timed&gt;&gt;
+    &lt;&lt;timed 10s&gt;&gt;&lt;&lt;set $mod6 to true&gt;&gt;
+      &lt;&lt;set $skip to true&gt;&gt;&lt;&lt;goto &quot;3modulelist&quot;&gt;&gt;&lt;&lt;/timed&gt;&gt;
   &lt;&lt;/replace&gt;&gt;
 &lt;&lt;/timed&gt;&gt;
 &lt;/div&gt;
@@ -2690,6 +2700,9 @@ When finished click &lt;&lt;button &quot;Move on&quot;&gt;&gt;&lt;&lt;set $prevp
 &lt;/main&gt;
 &lt;&lt;include &quot;footerskip&quot;&gt;&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="105" name="4modulelist" tags="nobr" position="600,1350" size="100,100">&lt;&lt;set $passage to &quot;4modulelist&quot;&gt;&gt;&lt;&lt;set $session to 4&gt;&gt;
+&lt;&lt;if $skip is true&gt;&gt;&lt;&lt;timed 5s&gt;&gt;&lt;&lt;set $skip to false&gt;&gt;
+&lt;&lt;goto $nextpass&gt;&gt;
+&lt;&lt;/timed&gt;&gt;&lt;&lt;/if&gt;&gt;
 &lt;div class=&quot;wrapper box&quot;&gt;
   &lt;main class=&quot;modules&quot;&gt;
   &lt;h1 class=&quot;title&quot;&gt;SESSION FOUR&lt;/h1&gt;
@@ -3233,7 +3246,8 @@ When finished click &lt;&lt;button &quot;Move on&quot;&gt;&gt;&lt;&lt;set $prevp
 &lt;p&gt;I hope you all feel more comfortable thinking about where you are comfortable &lt;/p&gt;
 &lt;p&gt;You all look pretty comfy… or well, I’m going to assume you do! &lt;/p&gt;
 
-  &lt;&lt;timed 8s&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;set $mod9 to true&gt;&gt;&lt;&lt;goto $nextpass&gt;&gt;&lt;&lt;/timed&gt;&gt;
+  &lt;&lt;timed 8s&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;set $mod9 to true&gt;&gt;
+      &lt;&lt;set $skip to true&gt;&gt;&lt;&lt;goto &quot;4modulelist&quot;&gt;&gt;&lt;&lt;/timed&gt;&gt;
     &lt;/div&gt;
 &lt;/main&gt;
      &lt;&lt;include &quot;footerskip&quot;&gt;&gt;
@@ -3343,6 +3357,9 @@ When finished click &lt;&lt;button &quot;Move on&quot;&gt;&gt;&lt;&lt;set $prevp
 &lt;/main&gt;
 &lt;&lt;include &quot;footerskip&quot;&gt;&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="131" name="5modulelist" tags="nobr" position="100,1725" size="100,100">&lt;&lt;set $passage to &quot;5modulelist&quot;&gt;&gt;&lt;&lt;set $session to 5&gt;&gt;
+&lt;&lt;if $skip is true&gt;&gt;&lt;&lt;timed 5s&gt;&gt;&lt;&lt;set $skip to false&gt;&gt;
+&lt;&lt;goto $nextpass&gt;&gt;
+&lt;&lt;/timed&gt;&gt;&lt;&lt;/if&gt;&gt;
 &lt;div class=&quot;wrapper box&quot;&gt;
   &lt;main class=&quot;modules&quot;&gt;
   &lt;h1 class=&quot;title&quot;&gt;SESSION FIVE&lt;/h1&gt;
@@ -3844,7 +3861,8 @@ When finished click &lt;&lt;button &quot;Move on&quot;&gt;&gt;&lt;&lt;set $prevp
 
 &lt;p&gt;Your Artist will go away and help pull the ideas together, based on the work you have done today. &lt;/p&gt;
 
-&lt;&lt;button &quot;Next&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;set $mod12 to true&gt;&gt;&lt;&lt;goto $nextpass&gt;&gt;&lt;&lt;/button&gt;&gt;
+&lt;&lt;button &quot;Next&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;set $mod12 to true&gt;&gt;
+      &lt;&lt;set $skip to true&gt;&gt;&lt;&lt;goto &quot;5modulelist&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
 
 &lt;/div&gt;
  &lt;/main&gt;
@@ -3984,6 +4002,9 @@ When finished click &lt;&lt;button &quot;Move on&quot;&gt;&gt;&lt;&lt;set $prevp
 &lt;/main&gt;
 &lt;&lt;include &quot;footerskip&quot;&gt;&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="157" name="6modulelist" tags="nobr" position="850,1975" size="100,100">&lt;&lt;set $passage to &quot;6modulelist&quot;&gt;&gt;&lt;&lt;set $session to 6&gt;&gt;
+&lt;&lt;if $skip is true&gt;&gt;&lt;&lt;timed 5s&gt;&gt;&lt;&lt;set $skip to false&gt;&gt;
+&lt;&lt;goto $nextpass&gt;&gt;
+&lt;&lt;/timed&gt;&gt;&lt;&lt;/if&gt;&gt;
 &lt;div class=&quot;wrapper box&quot;&gt;
   &lt;main class=&quot;modules&quot;&gt;
   &lt;h1 class=&quot;title&quot;&gt;SESSION SIX&lt;/h1&gt;
@@ -4286,7 +4307,8 @@ When finished click &lt;&lt;button &quot;Move on&quot;&gt;&gt;&lt;&lt;set $prevp
 &lt;p&gt;Or close at least! &lt;/p&gt;
 
 
-&lt;&lt;button &quot;Next&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;set $mod14 to true&gt;&gt;&lt;&lt;goto $nextpass&gt;&gt;&lt;&lt;/button&gt;&gt;
+&lt;&lt;button &quot;Next&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;set $mod14 to true&gt;&gt;
+      &lt;&lt;set $skip to true&gt;&gt;&lt;&lt;goto &quot;6modulelist&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
 
 &lt;/div&gt;
  &lt;/main&gt;
@@ -4419,6 +4441,9 @@ When finished click &lt;&lt;button &quot;Move on&quot;&gt;&gt;&lt;&lt;set $prevp
 &lt;/main&gt;
 &lt;&lt;include &quot;footerskip&quot;&gt;&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="175" name="7modulelist" tags="nobr" position="600,2225" size="100,100">&lt;&lt;set $passage to &quot;7modulelist&quot;&gt;&gt;&lt;&lt;set $session to 7&gt;&gt;
+&lt;&lt;if $skip is true&gt;&gt;&lt;&lt;timed 5s&gt;&gt;&lt;&lt;set $skip to false&gt;&gt;
+&lt;&lt;goto $nextpass&gt;&gt;
+&lt;&lt;/timed&gt;&gt;&lt;&lt;/if&gt;&gt;
 &lt;div class=&quot;wrapper box&quot;&gt;
   &lt;main class=&quot;modules&quot;&gt;
   &lt;h1 class=&quot;title&quot;&gt;SESSION SEVEN&lt;/h1&gt;
@@ -4786,7 +4811,7 @@ When finished click &lt;&lt;button &quot;Move on&quot;&gt;&gt;&lt;&lt;set $prevp
 &lt;p&gt;That what you did today, &lt;/p&gt;
 &lt;p&gt;And what you’ve done over the past few weeks is the start of something &lt;/p&gt;
 
-&lt;&lt;timed 12s&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;set $mod16 to true&gt;&gt;&lt;&lt;goto $nextpass&gt;&gt;&lt;&lt;/timed&gt;&gt;
+&lt;&lt;timed 12s&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;set $mod16 to true&gt;&gt;&lt;&lt;set $skip to true&gt;&gt;&lt;&lt;goto &quot;7modulelist&quot;&gt;&gt;&lt;&lt;/timed&gt;&gt;
 
 &lt;/div&gt;
  &lt;/main&gt;
@@ -4956,6 +4981,9 @@ When finished click &lt;&lt;button &quot;Move on&quot;&gt;&gt;&lt;&lt;set $prevp
 &lt;/main&gt;
 &lt;&lt;include &quot;footerskip&quot;&gt;&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="199" name="8modulelist" tags="nobr" position="1100,2475" size="100,100">&lt;&lt;set $passage to &quot;8modulelist&quot;&gt;&gt;&lt;&lt;set $session to 8&gt;&gt;
+&lt;&lt;if $skip is true&gt;&gt;&lt;&lt;timed 5s&gt;&gt;&lt;&lt;set $skip to false&gt;&gt;
+&lt;&lt;goto $nextpass&gt;&gt;
+&lt;&lt;/timed&gt;&gt;&lt;&lt;/if&gt;&gt;
 &lt;div class=&quot;wrapper box&quot;&gt;
   &lt;main class=&quot;modules&quot;&gt;
   &lt;h1 class=&quot;title&quot;&gt;SESSION EIGHT&lt;/h1&gt;
@@ -5097,14 +5125,18 @@ When finished click &lt;&lt;button &quot;Move on&quot;&gt;&gt;&lt;&lt;set $prevp
    &lt;/div&gt;
     &lt;/main&gt;
          &lt;&lt;include &quot;footerskip&quot;&gt;&gt;
-  &lt;/div&gt;</tw-passagedata><tw-passagedata pid="205" name="8mod17outro1" tags="nobr" position="600,2600" size="100,100">&lt;&lt;set $passage to &quot;8mod17outro&quot;&gt;&gt;
+  &lt;/div&gt;</tw-passagedata><tw-passagedata pid="205" name="8mod17outro1" tags="nobr" position="600,2600" size="100,100">&lt;&lt;set $prevpass to &quot;8mod17intro4&quot;&gt;&gt;
+&lt;&lt;set $passage to &quot;8mod17outro&quot;&gt;&gt;
+&lt;&lt;set $nextpass to &quot;8sessionoutro1&quot;&gt;&gt;
+
 &lt;div class=&quot;wrapper&quot;&gt;
   &lt;&lt;include &quot;header&quot;&gt;&gt;
   &lt;main class=&quot;speaking&quot;&gt;
       &lt;div class=&quot;text-wrapper&quot;&gt;
 &lt;p&gt;TBC &lt;/p&gt;
 
-&lt;&lt;button &quot;Next&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;set $mod17 to true&gt;&gt;&lt;&lt;goto &quot;8sessionoutro1&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
+&lt;&lt;button &quot;Next&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;set $mod17 to true&gt;&gt;
+      &lt;&lt;set $skip to true&gt;&gt;&lt;&lt;goto &quot;8modulelist&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
 &lt;/div&gt;
 &lt;/main&gt;
      &lt;&lt;include &quot;footer&quot;&gt;&gt;
