blue highlighed bits in doc

--- a/index.html
+++ b/index.html
@@ -2939,8 +2939,12 @@ When finished click &lt;&lt;button &quot;Move on&quot;&gt;&gt;&lt;&lt;set $prevp
 &lt;p&gt;Clubs, Hearts, Diamonds &amp; Spades. &lt;/p&gt;
 &lt;p&gt;I like games. &lt;/p&gt;
 &lt;p&gt;Hand the Mapping Resources out, and let’s Power Map.&lt;/p&gt;
+&lt;div id=&quot;mount&quot;&gt;&lt;div&gt;
+&lt;&lt;timed 22s&gt;&gt;&lt;&lt;replace &quot;#mount&quot;&gt;&gt;
 &lt;p&gt;When you have the resources, I’ll explain more. &lt;/p&gt;
 &lt;p&gt;Click &lt;&lt;button &quot;here&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;goto &quot;4mod7b&quot;&gt;&gt;&lt;&lt;/button&gt;&gt; when ready for the explanation&lt;/p&gt;
+&lt;&lt;/replace&gt;&gt;
+&lt;&lt;/timed&gt;&gt;
 /* &lt;div id=&quot;mount&quot;&gt;&lt;/div&gt; */
 /* &lt;&lt;timed 300s&gt;&gt;
 &lt;&lt;replace &quot;#mount&quot;&gt;&gt;
@@ -3071,8 +3075,11 @@ When finished click &lt;&lt;button &quot;Move on&quot;&gt;&gt;&lt;&lt;set $prevp
     &lt;div class=&quot;text-wrapper&quot;&gt;
 &lt;p&gt;Teacher, hand out Module 8’s resources and let’s imagine Utopia
 &lt;/p&gt;
+&lt;div id=&quot;mount&quot;&gt;&lt;/div&gt;
+&lt;&lt;timed 11s&gt;&gt;&lt;&lt;replace &quot;#mount&quot;&gt;&gt;
 &lt;p&gt;When you have the resources, I’ll explain more. &lt;/p&gt;
 &lt;p&gt;Click &lt;&lt;button &quot;here&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;goto $nextpass&gt;&gt;&lt;&lt;/button&gt;&gt; when ready for the explanation&lt;/p&gt;
+&lt;&lt;/replace&gt;&gt;&lt;&lt;/timed&gt;&gt;
 &lt;/div&gt;
  &lt;/main&gt;
      &lt;&lt;include &quot;footerskip&quot;&gt;&gt;
@@ -3206,8 +3213,10 @@ When finished click &lt;&lt;button &quot;Move on&quot;&gt;&gt;&lt;&lt;set $prevp
 &lt;p&gt;Teacher, the instructions are on the Module Card. &lt;/p&gt;
 &lt;p&gt;We need a Comfort Marker. &lt;/p&gt;
 &lt;p&gt;Lucky you were given a potato in compartment 1, hey? &lt;/p&gt;
+&lt;div id=&quot;mount&quot;&gt;&lt;/div&gt;
+&lt;&lt;timed 18s&gt;&gt;&lt;&lt;replace &quot;#mount&quot;&gt;&gt;
 &lt;p&gt;When you have completed this click &lt;&lt;button &quot;Move on&quot;&gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;goto &quot;4mod9outro1&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/p&gt;
-
+&lt;&lt;/replace&gt;&gt;&lt;&lt;/timed&gt;&gt;
 &lt;/div&gt;
  &lt;/main&gt;
      &lt;&lt;include &quot;footerskip&quot;&gt;&gt;
