small text amendment

--- a/index.html
+++ b/index.html
@@ -1146,17 +1146,17 @@ The order you go in will be randomised.&lt;/p&gt;
 
 &lt;&lt;include &quot;unlock&quot;&gt;&gt;
 &lt;div &gt;
-&lt;h1 class=&quot;title larger-title&quot; id=&quot;titleMount&quot;&gt;Welcome&lt;/h1&gt;
-  &lt;div class=&quot;codeword-title-wrapper&quot; id=&quot;mount&quot;&gt;&lt;h1 class=&quot;title&quot;&gt;Entry to &lt;/h1&gt;&lt;h1 class=&quot;title&quot;&gt;The Box&lt;/h1&gt;&lt;/div&gt;
+&lt;h1 class=&quot;title larger-title&quot; id=&quot;titleMount&quot;&gt;Toby&lt;/h1&gt;
+  &lt;div class=&quot;codeword-title-wrapper&quot; id=&quot;mount&quot;&gt;&lt;h1 class=&quot;title&quot;&gt;Reveal the box &lt;/h1&gt;&lt;h1 class=&quot;title&quot;&gt;To the group&lt;/h1&gt;&lt;/div&gt;
 
    
   &lt;div id=&quot;btnMount&quot;&gt;
-    &lt;&lt;button &quot;Enter&quot;&gt;&gt;
+    &lt;&lt;button &quot;Reveal&quot;&gt;&gt;
       &lt;&lt;timed 0.1s&gt;&gt;
         &lt;&lt;replace &quot;#titleMount&quot;&gt;&gt;&lt;&lt;/replace&gt;&gt;
         &lt;&lt;replace &quot;#btnMount&quot;&gt;&gt;&lt;&lt;/replace&gt;&gt;
         &lt;&lt;replace &quot;#mount&quot;&gt;&gt;
-          &lt;p&gt;To dive in deeper&lt;/p&gt;
+          &lt;p&gt;And to dive in deeper&lt;/p&gt;
           &lt;p&gt; Text &lt;h2 class=&quot;subtitle inline&quot;&gt;HONEST&lt;/h2&gt; to &lt;h2 class=&quot;subtitle inline&quot;&gt;07400179362&lt;/h2&gt;. &lt;/p&gt;     
         &lt;&lt;button &quot;Finish&quot;&gt;&gt;
         &lt;&lt;audio &quot;pyramidtransition_1&quot; play &gt;&gt;&lt;&lt;set $prevpass to $passage&gt;&gt;&lt;&lt;goto &quot;landing&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
